# feature_workspace

./: Cargo.toml  README.md  cmd.md  test_cmd.txt
fospring/: Cargo.toml
fospring-base/: Cargo.toml
fospring-base/src/: errors.rs  lib.rs
fospring-cc/: Cargo.toml  build.rs
fospring-cc/src/: lib.rs
fospring-cc/src/c/: bar.c  foo.c  time.cpp
fospring-log/: Cargo.toml
fospring-log/src/: lib.rs  simple_logger.rs
fospring-middleware/: Cargo.toml
fospring-middleware/src/: lib.rs
fospring-view/: Cargo.toml
fospring-view/src/: lib.rs
fospring/src/: lib.rs  main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
