[package]
name = "fospring-view"
version = "0.1.0"
authors = ["qiuyongchun <qiuyongchun@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#https://doc.rust-lang.org/cargo/reference/features.html
[features]
default = ["fospring_vc"]
fospring_vc = []
