[package]
name = "fospring"
version = "0.1.0"
authors = ["qiuyongchun <qiuyongchun@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies.fospring-view]
path = "../fospring-view"
version = "0.1.0"

[dependencies.fospring-log]
path = "../fospring-log"
version = "0.1.0"

[features]
fospring_vc = []
neo = []
